crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__home_workspace.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  home                                                                                                             +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
                              ╭────────────────────────────────────────────────────────────────────────────────────────╮
                              │  zsh                                                                                +  │
                              │ ────────────────────────────────────────────────────────────────────────────────────── │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              │                                                                                        │
                              ╰────────────────────────────────────────────────────────────────────────────────────────╯
 ( / ) search · ( Enter ) open · ( n ) new · ( : ) commands · ( q ) quit
