crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__home_ws_bar_focused.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  home                                                                                                             +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ projects ──────────────────╮╭───────────────────────────────────────────╮╭───────────────────────────────────────────╮
│  search…                   ││  RecentCommits                         +  ││  Branches                              +  │
│━━━━━━━━━━━━━━━━━━━━━━━━━━━━││ ───────────────────────────────────────── ││ ───────────────────────────────────────── │
│  (no projects)             ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││   select a project                        ││   select a project                        │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
│                            ││                                           ││                                           │
╰────────────────────────────╯╰───────────────────────────────────────────╯╰───────────────────────────────────────────╯
  h/l  switch ·  d  close ·  n  new ·  j  exit bar
