crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__normal_ws_active_window.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓╭──────────────────────────────────────────────────────────╮
┃  editor                                               +  ┃│  tests                                                +  │
┃ ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ ┃│ ──────────────────────────────────────────────────────── │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┃                                                          ┃│                                                          │
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛╰──────────────────────────────────────────────────────────╯
  ␣  leader ·  :  commands ·  n  new tab ·  s/v  split ·  q  quit
