crates/pane-tui/src/ui/snapshots/pane__ui__snapshot_tests__resize_four_way_inner_correct.snap
---
source: crates/pane-tui/src/ui/snapshot_tests.rs
expression: output
---
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│  dev                                                                                                              +  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭──────────────────────────────────────────────────────────╮╭──────────────────────────────────────────────────────────╮
│  A                                                    +  ││  C                                                    +  │
│ ──────────────────────────────────────────────────────── ││ ──────────────────────────────────────────────────────── │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
╰──────────────────────────────────────────────────────────╯│                                                          │
╭──────────────────────────────────────────────────────────╮│                                                          │
│  B                                                    +  ││                                                          │
│ ──────────────────────────────────────────────────────── ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          │╰──────────────────────────────────────────────────────────╯
│                                                          │╭──────────────────────────────────────────────────────────╮
│                                                          ││  D                                                    +  │
│                                                          ││ ──────────────────────────────────────────────────────── │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
│                                                          ││                                                          │
╰──────────────────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────╯
 ( ␣ ) leader · ( : ) commands · ( n ) new tab · ( s/v ) split · ( q ) quit
